# TemplateCmake

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Soundex.cpp  Soundex.h  calculator.cpp  calculator.h
test/: CMakeLists.txt  test_calc.cpp  test_main.cpp
